# flext-plugin

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LOGGING_MIGRATION.md  Makefile  README.md  TODO.md  base.mk  go.mod  pyproject.toml  requirements.txt  test_import.py  test_imports.py  test_simple.py  test_typing.py
.plugin_backups/test-plugin/: 12e01109-bb16-45c7-933a-29e6c3a5fbba_mock.py  13b88314-34f6-4151-b2cc-de5b96d597ae_mock.py  c8c270db-3218-4f27-b62c-51f65a7a9ff5_mock.py
.serena/: project.yml
docs/: README.md  TODO.md  api-reference.md  architecture.md  development.md  getting-started.md  index.md
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md  components.md  containers.md  context.md  data.md  implementation.md  quality.md  security.md
docs/architecture/adr/: README.md  adr-001-clean-architecture.md  adr-003-plugin-discovery.md  adr-template.md  decision-log.md
docs/architecture/diagrams/: component-diagram.puml  container-diagram.puml  data-flow.puml  system-context.puml
docs/examples/: README.md  basic-plugin.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  plugin-development.md  quick-start.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
docs/standards/: python-module-organization.md
examples/: 01_basic_plugin.py  02_plugin_configuration.py  03_docker_integration.py  README.md  __init__.py  basic_plugin_example.py  docker_integration_example.py  plugin_configuration_example.py  test_real_plugin_integration.py
examples/basic_plugin/: hello_world_plugin.py
examples/real_plugins/: README.md  csv_extractor_plugin.py  csv_loader_plugin.py  data_aggregator_transformer_plugin.py  data_filter_transformer_plugin.py  postgres_extractor_plugin.py  postgres_loader_plugin.py
examples/singer_plugin/: tap_example.py
examples/stateful_plugin/: counter_plugin.py
pkg/domain/: base.go  errors.go
pkg/domain/entities/: factories.go  plugin.go  plugin_execution.go  plugin_test.go
pkg/domain/ports/: plugin.go
pkg/domain/specifications/: plugin.go
pkg/domain/valueobjects/: plugin.go
plugins/test_extractor/: __init__.py
plugins/test_transformer/: __init__.py
reports/: pytest.xml
scripts/: README.md  mode.py  sync.py  workspace_orchestrator.py
scripts/check/: workspace_check.py
scripts/core/: check_base_mk_sync.py  generate_scripts_inventory.py  pytest_diag_extract.py  skill_validate.py  stub_supply_chain.py  text_pattern_scanner.py
scripts/dependencies/: detect_runtime_dev_deps.py  modernize_pyproject.py  sync_internal_deps.py
scripts/documentation/: audit.py  build.py  fix.py  generate.py  workspace_run.py
scripts/github/: lint_workflows.py  pr_manager.py  pr_workspace.py  sync_workflows.py
scripts/maintenance/: _discover.py  enforce_python_version.py
scripts/release/: build.py  changelog.py  notes.py  run.py  version.py
src/: __init__.py
src/flext_plugin/: __init__.py  __init__.py.old  __version__.py  adapters.py  api.py  base.py  cli.py  config.py  constants.py  context.py  data_flow.py  discovery.py  discovery_manager.py  entities.py  exceptions.py  fields.py  flext_plugin_constants.py  flext_plugin_handlers.py  flext_plugin_models.py  flext_plugin_platform.py  flext_plugin_services.py  flext_plugin_types.py  handlers.py  hot_reload.py  implementations.py  legacy.py  loader.py  manager.py  models.py  pipeline_executor.py  platform.py  plugin.py  plugin_config.py  plugin_execution.py  plugin_metadata.py  plugin_registry.py  ports.py  protocols.py  real_adapters.py  services.py  (+11 more)
src/flext_plugin/_utilities/: __init__.py  adapters.py  discovery.py  entities.py  handlers.py  hot_reload.py  implementations.py  loader.py  plugin_platform.py  services.py
src/flext_plugin/application/: README.md  __init__.py  handlers.py  services.py
src/flext_plugin/core/: README.md  __init__.py  base.py  context.py  discovery.py  loader.py  manager.py  types.py  validators.py
src/flext_plugin/domain/: README.md  __init__.py  entities.py  ports.py  value_objects.py
src/flext_plugin/hot_reload/: __init__.py  reloader.py  rollback.py  state_manager.py  watcher.py
src/flext_plugin/infrastructure/: __init__.py  config.py  container.py  di_container.py  ports.py
src/flext_plugin/infrastructure/persistence/: __init__.py  repositories.py
src/flx_plugin/: __init__.py  base.py  context.py  discovery.py  discovery_manager.py  loader.py  manager.py
src/flx_plugin/core/: __init__.py  base.py  context.py  discovery.py  loader.py  manager.py  types.py  validators.py
src/flx_plugin/hot_reload/: __init__.py  reloader.py  rollback.py  state_manager.py  watcher.py
tests/: __init__.py  conftest.py  conftest_project.py  constants.py  models.py  protocols.py  test_api.py  test_application_handlers.py  test_application_services.py  test_application_services_coverage.py  test_core_types.py  test_discovery.py  test_discovery_coverage.py  test_discovery_simple.py  test_domain_entities.py  test_domain_ports.py  test_examples.py  test_handlers.py  test_handlers_coverage.py  test_hot_reload.py  test_hot_reload_coverage.py  test_hot_reload_package.py  test_imports.py  test_loader.py  test_loader_simple.py  test_manager.py  test_manager_comprehensive.py  test_plugin.py  test_plugin_basic.py  test_simple_api_coverage.py  test_simple_plugin.py  typings.py  utilities.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_application_handlers.py  test_application_services.py  test_config.py  test_constants.py  test_core_types.py  test_discovery.py  test_domain_entities.py  test_domain_ports.py  test_domain_services_exception_coverage.py  test_examples.py  test_handlers.py  test_hot_reload.py  test_hot_reload_package.py  test_imports.py  test_loader.py  test_manager.py  test_models.py  test_plugin.py  test_types.py
