[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    description = "FLEXT Plugin - Plugin System for FLEXT Platform"
    name = "flext-plugin"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "aiofiles (>=24.1.0)",
        "jsonschema (>=4.25.0)",
        "psutil (>=7.0.0)",
        "pydantic (>=2.11.7)",
        "pydantic-settings (>=2.10.1)",
        "watchdog (>=6.0.0)",
    ]
    keywords = [
        "architecture",
        "async",
        "enterprise",
        "extensions",
        "flext",
        "plugins",
        "typed",
    ]
[[project.authors]]
    name  = "FLEXT Team"
    email = "team@flext.sh"

[[project.maintainers]]
    name  = "FLEXT Team"
    email = "team@flext.sh"

[project.license]
    text = "MIT"

[project.urls]
    Homepage      = "https://github.com/flext-sh/flext"
    Repository    = "https://github.com/flext-sh/flext"
    Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"

[project.optional-dependencies]
    dev = [
        "autoflake>=2.3.1",
        "black>=25.1.0",
        "codespell>=2.3.0",
        "deptry>=0.23.0",
        "isort>=6.0.1",
        "pre-commit>=4.0.1",
        "pylint>=3.3.0",
        "pyupgrade>=3.19.0",
        "radon>=6.0.1",
        "ruff>=0.12.3",
        "vulture>=2.13",
    ]
    test = [
        "factory-boy>=3.3.1",
        "faker>=37.4.0",
        "hypothesis>=6.125.0",
        "pytest>=8.4.0",
        "pytest-benchmark>=5.1.0",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=6.2.0",
        "pytest-deadfixtures>=2.2.1",
        "pytest-env>=1.1.5",
        "pytest-httpx>=0.35.0",
        "pytest-mock>=3.14.0",
        "pytest-randomly>=3.16.0",
        "pytest-sugar>=1.0.0",
        "pytest-timeout>=2.4.0",
        "pytest-xdist>=3.8.0",
    ]
    typings = [
        "django-stubs>=5.2.2",
        "types-ldap3>=2.9.13.20250622",
        "types-protobuf>=6.30.2.20250703",
        "types-psutil>=7.0.0",
        "types-psycopg2>=2.9.21.20250718",
        "types-python-dateutil>=2.9.0",
        "types-pyyaml>=6.0.12",
        "types-redis>=4.6.0",
        "types-requests>=2.32.4",
        "types-setuptools>=80.9.0",
        "types-toml>=0.10.8.20240310",
    ]
    security = [
        "bandit>=1.8.0",
        "pip-audit>=2.7.3",
    ]

[project.scripts]
    flext-plugin = "flext_plugin.cli:main"

[tool.poetry]
[[tool.poetry.packages]]
    include = "flext_plugin"
    from    = "src"

[tool.bandit]
    extend = "../.bandit-shared.toml"

[tool.coverage]
    extend = "../.coverage-shared.toml"

[tool.deptry]
    exclude = [
        "__pycache__",
        ".archive",
        ".git",
        ".meltano",
        ".mypy_cache",
        ".pyrefly_cache",
        ".pytest_cache",
        ".ruff_cache",
        ".venv",
        "build",
        "dist",
        "htmlcov",
        "vendor",
        "node_modules",
        "reports",
        "venv",
    ]
    known_first_party = [
        "flext_plugin",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "security",
        "test",
        "typings",
    ]

[tool.ruff]
    # extend = "../ruff-shared.toml"

[tool.pytest.ini_options]
    minversion = "8.0"
    asyncio_mode = "auto"
    addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=flext_plugin",
        "--cov-branch",
        "--cov-report=term-missing:skip-covered",
        "--cov-report=html:reports/coverage",
        "--cov-report=xml:reports/coverage.xml",
        "--cov-fail-under=90",
        "--maxfail=1",
        "--tb=short",
    ]
    testpaths = [
        "tests",
    ]
    markers = [
        "unit: Unit tests",
        "integration: Integration tests",
        "slow: Slow tests",
        "smoke: Smoke tests",
        "e2e: End-to-end tests",
    ]

[tool.poetry.dependencies.flext-core]
    path    = "../flext-core"
    develop = true

[tool.poetry.dependencies.flext-observability]
    path    = "../flext-observability"
    develop = true

[tool.ruff.lint.isort]
    known-first-party = [
        "flext_plugin",
    ]

[tool.pyrefly]
    python-version = "3.13"
    search-path = [
        "examples",
        "scripts",
        "src",
        "tests",
    ]
