[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "anyio (>=4.0.0)",
        "jsonschema (>=4.25.0)",
        "psutil (>=7.0.0)",
        "pydantic (>=2.12.3)",
        "pydantic-settings (>=2.11.0)",
        "watchdog (>=6.0.0)",
        "pydantic-core (>=2.41.4)",
        "pytest (>=9.0.2,<10.0.0)",
        "pytest-cov (>=7.0.0,<8.0.0)",
        "pytest-randomly (>=4.0.1,<5.0.0)",
        "faker (>=40.1.0,<41.0.0)",
    ]
    description = "FLEXT Plugin - Plugin System for FLEXT Platform"
    keywords = [
        "architecture",
        "enterprise",
        "extensions",
        "flext",
        "plugins",
        "typed",
    ]
    name = "flext-plugin"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext"
        Repository    = "https://github.com/flext-sh/flext"

    [project.optional-dependencies]
        dev = [
            "autoflake>=2.3.1",
            "black>=25.1.0",
            "codespell>=2.3.0",
            "deptry>=0.23.0",
            "isort>=6.0.1",
            "pre-commit>=4.0.1",
            "pylint>=3.3.0",
            "pyupgrade>=3.19.0",
            "radon>=6.0.1",
            "ruff>=0.12.3",
            "vulture>=2.13",
        ]
        security = [
            "bandit>=1.8.0",
            "pip-audit>=2.7.3",
        ]
        test = [
            "factory-boy>=3.3.1",
            "faker>=37.4.0",
            "hypothesis>=6.125.0",
            "pytest-benchmark>=5.1.0",
            "pytest-clarity>=1.0.1",
            "pytest-cov>=6.2.0",
            "pytest-deadfixtures>=2.2.1",
            "pytest-env>=1.1.5",
            "pytest-mock>=3.14.0",
            "pytest-randomly>=3.16.0",
            "pytest-sugar>=1.0.0",
            "pytest-timeout>=2.4.0",
            "pytest-xdist>=3.8.0",
            "pytest>=8.4.0",
        ]
        typings = [
            "django-stubs>=5.2.2",
            "types-ldap3>=2.9.13.20250622",
            "types-protobuf>=6.30.2.20250703",
            "types-psutil>=7.0.0",
            "types-psycopg2>=2.9.21.20250718",
            "types-python-dateutil>=2.9.0",
            "types-pyyaml>=6.0.12",
            "types-redis>=4.6.0",
            "types-requests>=2.32.4",
            "types-setuptools>=80.9.0",
            "types-toml>=0.10.8.20240310",
        ]

    [project.scripts]
        flext-plugin = "flext_plugin.cli:main"

[tool.poetry]
    [[tool.poetry.packages]]
        from    = "src"
        include = "flext_plugin"

[tool.deptry]
    known_first_party = [
        "flext_plugin",
        "flext_core",
        "flext_observability",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "security",
    ]

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "autoflake",
        "bandit",
        "black",
        "codespell",
        "deptry",
        "isort",
        "pip-audit",
        "pre-commit",
        "pylint",
        "pyupgrade",
        "radon",
        "ruff",
        "vulture",
        # Type stubs
        "django-stubs",
        "types-ldap3",
        "types-protobuf",
        "types-psutil",
        "types-psycopg2",
        "types-python-dateutil",
        "types-pyyaml",
        "types-redis",
        "types-requests",
        "types-setuptools",
        "types-toml",
        # Runtime deps used indirectly (via pydantic, anyio)
        "anyio",
        "faker",
        "jsonschema",
        "psutil",
        "pydantic-core",
        "pytest",
        "pytest-cov",
        "pytest-randomly",
        "watchdog",
    ]

[tool.pytest.ini_options]
    addopts = [
        "--cov-branch",
        "--cov-fail-under=80",
        "--cov-report=html:reports/coverage",
        "--cov-report=term-missing:skip-covered",
        "--cov-report=xml:reports/coverage.xml",
        "--cov=flext_plugin",
        "--maxfail=1",
        "--strict-config",
        "--strict-markers",
        "--tb=short",
        "-ra",
    ]
    markers = [
        "e2e: End-to-end tests",
        "integration: Integration tests",
        "slow: Slow tests",
        "smoke: Smoke tests",
        "unit: Unit tests",
    ]
    minversion = "8.0"
    testpaths = [
        "tests",
    ]

    [tool.poetry.dependencies.flext-core]
        develop = true
        path    = "../flext-core"

                                [tool.poetry.dependencies.flext-observability]
        develop = true
        path    = "../flext-observability"

    [tool.ruff]
        extend = "../ruff-shared.toml"

    [tool.ruff.lint.per-file-ignores]
        "src/flext_plugin/discovery.py" = ["ARG002"]  # paths parameter required by protocol

    [tool.ruff.lint.isort]
        known-first-party = [
            "flext_plugin",
        ]

    [tool.pyrefly]
        search-path = ["src", "tests"]
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/hot_reload.py"
        [tool.pyrefly.sub-config.errors]
        not-a-type = false
        missing-attribute = false
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/platform.py"
        [tool.pyrefly.sub-config.errors]
        bad-param-name-override = false
        bad-assignment = false
        bad-argument-type = false
        unexpected-keyword = false
        missing-attribute = false
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/implementations.py"
        [tool.pyrefly.sub-config.errors]
        bad-return = false
        no-matching-overload = false
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/services.py"
        [tool.pyrefly.sub-config.errors]
        missing-attribute = false
        missing-module-attribute = false
        bad-argument-type = false
        unexpected-keyword = false
        bad-override = false
        bad-assignment = false
        bad-return = false
        no-matching-overload = false
        unsupported-operation = false
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/utilities.py"
        [tool.pyrefly.sub-config.errors]
        missing-attribute = false
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/settings.py"
        [tool.pyrefly.sub-config.errors]
        bad-override = false
        [[tool.pyrefly.sub-config]]
        matches = "**/flext_plugin/typings.py"
        [tool.pyrefly.sub-config.errors]
        unknown-name = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
